--- a/index_callCentre.html
+++ b/index_callCentre.html
@@ -54,15 +54,15 @@
 
                  <div class="pull-left" style="margin-left: 25px;position: relative">
                      <span class="pull-left">地址</span>
-                     <div class="layui-form-item pull-left">
-                         <div class="layui-input-inline" style="top:6px;">
-                             <select name="quiz1">
-                                 <option value="1">请选择省</option>
-                                 <option value="2" selected="">浙江省</option>
-                                 <option value="3">江西省</option>
-                                 <option value="4">福建省</option>
-                             </select>
-                         </div>
+                     <div class="layui-form-item pull-left"> 
+                         <div class="layui-input-inline"> 
+                             <select name="quiz1"> 
+                                 <option value="1">请选择省</option> 
+                                 <option value="2" selected="">浙江省</option> 
+                                 <option value="3">江西省</option> 
+                                 <option value="4">福建省</option> 
+                             </select> 
+                         </div> 
 
                          <div class="layui-input-block" style="position: absolute;top: 6px;left: 45px;">
                              <input style="width: 106px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="小区" autocomplete="off" class="layui-input">
@@ -175,47 +175,47 @@
                              <form class="z_addright"  action="">
 
                                  <div>
-                                     <div class="layui-input-inline" style="margin-top: 0px;">
-                                         <select name="quiz1">
-                                             <option value="1">咨询一级分类</option>
-                                             <option value="2">咨询二级分类</option>
-                                             <option value="3">咨询三级分类</option>
-                                             <option value="4">咨询四级分类</option>
+                                     <div class="layui-input-inline" style="margin-top: -18px"> 
+                                         <select name="quiz1"> 
+                                             <option value="1">咨询一级分类</option> 
+                                             <option value="2">咨询二级分类</option> 
+                                             <option value="3">咨询三级分类</option> 
+                                             <option value="4">咨询四级分类</option> 
                                          </select>
                                      </div>
 
-                                     <div class="layui-input-inline" style="margin-top: 0px;margin-left: 12px;">
-                                         <select name="quiz2">
-                                             <option value="2">咨询二级分类</option>
-                                             <option value="3">咨询三级分类</option>
-                                             <option value="4">咨询四级分类</option>
+                                     <div class="layui-input-inline" style="margin-top: -18px;margin-left: 12px"> 
+                                         <select name="quiz2"> 
+                                             <option value="2">咨询二级分类</option> 
+                                             <option value="3">咨询三级分类</option> 
+                                             <option value="4">咨询四级分类</option> 
                                          </select>
                                      </div>
                                  </div>
 
-                                 <div style="margin-top: 13px">
-                                     <div class="layui-input-inline" >
-                                         <select name="quiz3">
-                                             <option value="1">请选择大类</option>
-                                             <option value="2">一类</option>
-                                             <option value="3">二类</option>
-                                             <option value="4">三类</option>
+                                 <div style="margin-top: -3px">
+                                     <div class="layui-input-inline"> 
+                                         <select name="quiz3"> 
+                                             <option value="1">请选择大类</option> 
+                                             <option value="2">一类</option> 
+                                             <option value="3">二类</option> 
+                                             <option value="4">三类</option> 
                                          </select>
                                      </div>
 
-                                     <div class="layui-input-inline" style="margin-left: 12px">
-                                         <select name="quiz4">
-                                             <option value="2">请选择设备</option>
-                                             <option value="3">1</option>
-                                             <option value="4">2</option>
+                                     <div class="layui-input-inline" style="margin-left: 12px"> 
+                                         <select name="quiz4"> 
+                                             <option value="2">请选择设备</option> 
+                                             <option value="3">1</option> 
+                                             <option value="4">2</option> 
                                          </select>
                                      </div>
 
-                                     <div class="layui-input-inline" style="margin-left: 12px">
-                                         <select name="quiz5">
-                                             <option value="2">请选择品类</option>
-                                             <option value="3">2</option>
-                                             <option value="4">4</option>
+                                     <div class="layui-input-inline" style="margin-left: 12px"> 
+                                         <select name="quiz5"> 
+                                             <option value="2">请选择品类</option> 
+                                             <option value="3">2</option> 
+                                             <option value="4">4</option> 
                                          </select>
                                      </div>
                                  </div>
