--- a/waitauditturnbill.html
+++ b/waitauditturnbill.html
@@ -62,7 +62,7 @@
                          <td>山悟空-顺悟空</td>
                          <td>2017-12-22 12:22:22</td>
                          <td>已处理</td>
-                         <td style="color: rgb(105,121,215);cursor: pointer">审核</td>
+                         <td onclick="shenhe()" style="color: rgb(105,121,215);cursor: pointer">审核</td>
                      </tr>
                      <tr>
                          <td><input type="checkbox" name="" lay-skin="primary"></td>
@@ -165,6 +165,11 @@
                  });
                  form.render('checkbox');
              });
+             
+             
+             shenhe = function(){
+	             parent.addTab('审核','audit.html','shenhe');
+	         };
 
          });
      </script>    
