--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<link rel="stylesheet" type="text/css" href="css/q_Header.css" />
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+	 	<script src="layer-v3.0.3/layer/layer.js"></script>
 		<script src="layui/layui.js" type="text/javascript"></script>
+	 	<script type="text/javascript" src="js/layer-extend.js"></script>
 		<style>
 			.admin-nav-card .layui-tab-item iframe { width: 100%; border: 0; height: 100%; }
 		</style>
@@ -76,13 +78,13 @@
 					</ul>
 				</div>
 				<div style="position: relative;" class="e_header_right e_cb">
-					<div  style="height: 30px; cursor: pointer; margin-top: 20px; ">
-						<img class="e_cb e_header_right_img_1" src="img/e_xiasanjiao.png" />
-						<span class="e_cb e_header_right_div3">administrator</span>
-						<img class="e_cb e_header_right_img_2" src="img/e_user.png" />
+					<div class="e_header_right_divs"  style="height: 40px; margin-top: 15px; cursor: pointer;">
+						<img style="margin-top: 19px;" class="e_cb e_header_right_img_1" src="img/e_xiasanjiao.png" />
+						<span style="margin-top: 7px;" class="e_cb e_header_right_div3">administrator</span>
+						<img style="margin-top: 10px;" class="e_cb e_header_right_img_2" src="img/e_user.png" />
 					</div>
-					<ul class="e_header_right_div3_ul" style="position: absolute; display: none; left:20px; top:40px; ">
-						<li style=" background-color: #ffffff; border: solid 1px #cccccc; margin-top: 34px; text-align: center; width:110px; box-shadow: 0px 0px 10px #888888;">
+					<ul class="e_header_right_div3_ul"  style="position: absolute;left:20px; top:100px; z-index: 999999; opacity:0;  cursor: pointer;">
+						<li onclick="loginOut()" style=" background-color: #ffffff; border: solid 1px #cccccc; margin-top: 34px; text-align: center; width:110px; box-shadow: 0px 0px 10px #888888;">
 							<span style="height: 30px; display: inline-block; color: #000000; line-height: 30px;">退出</span>
 						</li>
 					</ul>
@@ -103,6 +105,10 @@
 				    </div>
 				</div>
 			</div>
+		</div>
+		
+		<div id="loginOut" style="display: none;">
+			<p style="display: inline-block;margin-top:20px; width: 100%; text-align: center;">确定要退出吗？</p>
 		</div>
 	</body>
 
@@ -126,29 +132,42 @@
 				});
 			}).resize();
 			
-			
 			var $timer = null;
-			$('.e_header_right').mouseover(function(){
+			$('.e_header_right_divs').mouseover(function(){
 				clearTimeout($timer); 
-				$('.e_header_right_div3_ul').show();
+				$(".e_header_right_div3_ul").show();
+				$('.e_header_right_div3_ul').removeClass('ulHideQu').addClass('ulShowQu');
+				$('.e_header_right_img_1').removeClass('q_header_img_xuan_2').addClass('q_header_img_xuan');
 			});
-			$('.e_header_right').mouseleave(function(){
+			$('.e_header_right_divs').mouseleave(function(){
 				$timer=setTimeout(function(){
-					$(".e_header_right_div3_ul").hide();
-					alert('+++++');
+					$(".e_header_right_div3_ul").fadeOut();
+					$(".e_header_right_div3_ul").removeClass('ulShowQu').addClass('ulHideQu');
+					$('.e_header_right_img_1').removeClass('q_header_img_xuan').addClass('q_header_img_xuan_2');
 				},500);
 			});
 			$(".e_header_right_div3_ul").mouseover(function(){
 				clearTimeout($timer);
 				$(".e_header_right_div3_ul").show();
+				$(".e_header_right_div3_ul").removeClass('ulHideQu').addClass('ulShowQu');
+				$('.e_header_right_img_1').removeClass('q_header_img_xuan_2').addClass('q_header_img_xuan');
 			});
-			$(".e_header_right_div3_ul").mouseout(function(){
+			$(".e_header_right_div3_ul").mouseleave(function(){
 				$timer=setTimeout(function(){
-					$(".e_header_right_div3_ul").hide();
+					$(".e_header_right_div3_ul").fadeOut();
+					$(".e_header_right_div3_ul").removeClass('ulShowQu').addClass('ulHideQu');
+					$('.e_header_right_img_1').removeClass('q_header_img_xuan').addClass('q_header_img_xuan_2');
 				},500);
 			});
 		});
-		
+		//退出函数
+		loginOut = function(){
+			$.layer.openContent($("#loginOut"),"退出提示",{"area":['200px','145px'],btn:["确定","取消"],
+				yes:function(index, layero){
+					alert("我是确认按钮");
+				}
+	   		});
+		};
 		/**********************************************************************************************************/
 		
 		//用于动态生成tab标签
